--- a/safety_parabola/Cargo.toml
+++ b/safety_parabola/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = { version = "0.4", features = ["canvas"] }
+#iced = { version = "0.4", features = ["canvas"] }
+iced = { git = "https://github.com/iced-rs/iced", features = ["canvas"] }
 plotter = { version = "0.1.0", path = "../plotter" }
-
