--- a/safety_parabola/Cargo.toml
+++ b/safety_parabola/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 either = "1.8.0"
 #iced = { version = "0.4", features = ["canvas"] }
-iced = { git = "https://github.com/iced-rs/iced", features = ["canvas"] }
+iced = { git = "https://github.com/traxys/iced", features = [
+  "canvas",
+], branch = "div_canvas" }
 plotter = { version = "0.1.0", path = "../plotter" }
