Add trunk to CI

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,4 +7,5 @@ steps:
     image: rust:1.63
     commands:
       - apt-get update -y && apt-get install -y pandoc
+      - cargo install trunk
       - cargo xtask build --release
