--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["plotter", "safety_parabola", "xtask"]
+members = ["plotter", "safety_parabola", "modular_table", "xtask"]
