Add arrows to indicate directionality

--- a/plotter/Cargo.toml
+++ b/plotter/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 #iced_graphics = { version = "0.3.1", features = ["canvas"] }
 iced_graphics = { git = "https://github.com/traxys/iced", features = ["canvas"], branch = "div_canvas" }
+paste = "1.0.9"
