Update iced to 0.8

--- a/modular_table/Cargo.toml
+++ b/modular_table/Cargo.toml
@@ -6,9 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = { git = "https://github.com/traxys/iced", features = [
-  "canvas",
-], branch = "div_canvas" }
+iced = { version = "0.8.0", features = ["canvas"] }
 palette = "0.6.1"
 petgraph = "0.6.2"
 plotter = { version = "0.1.0", path = "../plotter" }
