--- a/bicycle_track/Cargo.toml
+++ b/bicycle_track/Cargo.toml
@@ -6,7 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = { git = "https://github.com/traxys/iced", features = [
-  "canvas",
-], branch = "div_canvas" }
+iced = { version = "0.8.0", features = ["canvas"] }
 plotter = { version = "0.1.0", path = "../plotter" }
