--- a/plotter/Cargo.toml
+++ b/plotter/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+iced_graphics = { version = "0.7.0", features = ["canvas"] }
 #iced_graphics = { version = "0.3.1", features = ["canvas"] }
-iced_graphics = { git = "https://github.com/traxys/iced", features = ["canvas"], branch = "div_canvas" }
 paste = "1.0.9"
