--- a/modular_table/Cargo.toml
+++ b/modular_table/Cargo.toml
@@ -6,7 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = { version = "0.8.0", features = ["canvas"] }
+#iced = { version = "0.8.0", features = ["canvas"] }
+iced = { git = "https://github.com/traxys/iced", branch = "fixup_wasm_replace", features = [
+  "canvas",
+] }
 palette = "0.6.1"
 petgraph = "0.6.2"
 plotter = { version = "0.1.0", path = "../plotter" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1"
