Update rust dependencies

--- a/ellipse_billard/Cargo.toml
+++ b/ellipse_billard/Cargo.toml
@@ -6,10 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#iced = { git = "https://github.com/iced-rs/iced", features = ["canvas"] }
-iced = { git = "https://github.com/traxys/iced", branch = "fixup_wasm_replace", features = [
-  "canvas",
-] }
+iced = { version = "0.10.0", features = ["canvas"] }
 plotter = { version = "0.1.0", path = "../plotter" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
