--- a/safety_parabola/Cargo.toml
+++ b/safety_parabola/Cargo.toml
@@ -7,10 +7,7 @@ edition = "2021"
 
 [dependencies]
 either = "1.8.0"
-# iced = { version = "0.8", features = ["canvas"] }
-iced = { git = "https://github.com/traxys/iced", branch = "fixup_wasm_replace", features = [
-  "canvas",
-] }
+iced = { version = "0.10.0", features = ["canvas"] }
 plotter = { version = "0.1.0", path = "../plotter" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
