--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
     - run: nix build .#web
     - run: tar -C result -cvaf viz.tar.gz
-    - run: curl --user traxys:${{ secrets.VIZ_PKGS }} \
-            --upload-file ./viz.tar.gz \
+    - run: curl --user traxys:${{ secrets.VIZ_PKGS }}
+            --upload-file ./viz.tar.gz
             https://gitea.familleboyer.net/api/packages/traxys/generic/viz/$(git rev-parse --short HEAD)/viz.tar.gz
